src/ai/snapshots/jiq__ai__ai_render__tests__snapshot_ai_popup_error_state.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                 ┌ AI Assistant ───────────────── Ctrl+A to close ┐ "
"                                                 │⚠ Error                                         │ "
"                                                 │                                                │ "
"                                                 │API Error: Rate limit exceeded. Please try      │ "
"                                                 │again later.                                    │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 └────────────────────────────────────────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
