src/ai/snapshots/jiq__ai__ai_render__tests__snapshot_ai_popup_loading_state.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                 ┌ AI Assistant ───────────────── Ctrl+A to close ┐ "
"                                                 │⏳ Thinking...                                  │ " Hidden by multi-width symbols: [(51, " ")]
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 └────────────────────────────────────────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
