src/ai/snapshots/jiq__ai__ai_render__tests__snapshot_ai_popup_loading_with_previous.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                 ┌ AI Assistant ───────────────── Ctrl+A to close ┐ "
"                                                 │Previous suggestion: Use .foo instead of .bar   │ "
"                                                 │                                                │ "
"                                                 │⏳ Thinking...                                  │ " Hidden by multi-width symbols: [(51, " ")]
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 └────────────────────────────────────────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
