src/ai/snapshots/jiq__ai__ai_render__tests__snapshot_ai_popup_long_query_wrapping.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                       ┌ AI Assistant apply | Ctrl+A to close ┐ "
"                                       │1. [Fix] .users[] | select(.active    │ "
"                                       │         == true and .age > 18) |     │ "
"                                       │         {name: .name, email:         │ "
"                                       │         .email, address: .address}   │ "
"                                       │   Filters active adult users and     │ "
"                                       │   extracts their contact             │ "
"                                       │   information                        │ "
"                                       │                                      │ "
"                                       └──────────────────────────────────────┘ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
