src/ai/snapshots/jiq__ai__ai_render__tests__snapshot_ai_popup_raw_response_fallback.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ┌ AI Assistant ─────────── Ctrl+A to close ┐ "
"                                                       │This is a plain text response without     │ "
"                                                       │structured suggestions.                   │ "
"                                                       │                                          │ "
"                                                       │It should be displayed as-is.             │ "
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       └──────────────────────────────────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
