src/ai/snapshots/jiq__ai__ai_render__tests__snapshot_ai_popup_response_state.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                 ┌ AI Assistant ───────────────── Ctrl+A to close ┐ "
"                                                 │The error in your query `.foo[` is a missing    │ "
"                                                 │closing bracket.                                │ "
"                                                 │                                                │ "
"                                                 │Try using `.foo[]` to iterate over the array,   │ "
"                                                 │or `.foo[0]` to access the first element.       │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 │                                                │ "
"                                                 └────────────────────────────────────────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
